codepkg/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>A_E_Model__c</fullName>
        <inlineHelpText>Used for A&amp;E model with different model code. Put in as N/A if not applicable to any Mainetti Model.</inlineHelpText>
        <label>A&amp;E Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Vertical__c</fullName>
        <description>Mainetti Key Business Verticals</description>
        <inlineHelpText>Mainetti Key Business Verticals</inlineHelpText>
        <label>Business Vertical</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hanger Business</fullName>
                    <label>Hangers &amp; Accessories</label>
                </value>
                <value>
                    <fullName>Flexible Packaging</fullName>
                </value>
                <value>
                    <fullName>TLA</fullName>
                </value>
                <value>
                    <fullName>Labels &amp; Tickets</fullName>
                </value>
                <value>
                    <fullName>MCare</fullName>
                </value>
                <value>
                    <fullName>INTELLIGENT SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>New Vertical</fullName>
                </value>
                <value>
                    <fullName>ABC123</fullName>
                    <isActive>false</isActive>
                    <label>ABC123</label>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                    <isActive>false</isActive>
                    <label>E-Commerce</label>
                </value>
                <value>
                    <fullName>EAS &amp; RFID</fullName>
                    <isActive>false</isActive>
                    <label>EAS &amp; RFID</label>
                </value>
                <value>
                    <fullName>Lables</fullName>
                    <isActive>false</isActive>
                    <label>Lables</label>
                </value>
                <value>
                    <fullName>M-Care</fullName>
                    <isActive>false</isActive>
                    <label>M-Care</label>
                </value>
                <value>
                    <fullName>Polybags</fullName>
                    <isActive>false</isActive>
                    <label>Polybags</label>
                </value>
                <value>
                    <fullName>RFID</fullName>
                    <isActive>false</isActive>
                    <label>RFID</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COGS_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COGS Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clips__c</fullName>
        <label>Clips</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plastic Clips</fullName>
                </value>
                <value>
                    <fullName>Metal Clips</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consolidated_Style__c</fullName>
        <inlineHelpText>used to group similar models which can be produce with same mould for consolidation purpose.</inlineHelpText>
        <label>Consolidated Style</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Log_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Log Form</label>
        <referenceTo>Design_Log_Form__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_LabelType__c</fullName>
        <label>Label Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Unique_ID__c</fullName>
        <label>External Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hook__c</fullName>
        <label>Hook</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plastic</fullName>
                </value>
                <value>
                    <fullName>Metal</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id_Copy__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loaded_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loaded Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Develop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>cogs</description>
        <label>Local Develop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mainetti_Model__c</fullName>
        <label>Mainetti Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PLASTIC</fullName>
                </value>
                <value>
                    <fullName>METAL</fullName>
                </value>
                <value>
                    <fullName>WOOD</fullName>
                </value>
                <value>
                    <fullName>SATIN</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orderable__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Ticked if this product is ready for sales</inlineHelpText>
        <label>Orderable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCESSORY</fullName>
                </value>
                <value>
                    <fullName>BLOOD PRESSURE MONITOR</fullName>
                </value>
                <value>
                    <fullName>BOTTLE</fullName>
                </value>
                <value>
                    <fullName>BOTTOM</fullName>
                </value>
                <value>
                    <fullName>BOX</fullName>
                </value>
                <value>
                    <fullName>BUCKETS</fullName>
                </value>
                <value>
                    <fullName>CAPS &amp; CLOSURES</fullName>
                </value>
                <value>
                    <fullName>CARE LABEL</fullName>
                </value>
                <value>
                    <fullName>CARGO SEATS</fullName>
                </value>
                <value>
                    <fullName>CARTON BOX</fullName>
                </value>
                <value>
                    <fullName>CARTRIDGE FILTER</fullName>
                </value>
                <value>
                    <fullName>CLEAR SELF-SEAL BAGS</fullName>
                </value>
                <value>
                    <fullName>CLIP</fullName>
                </value>
                <value>
                    <fullName>COMPONENT</fullName>
                </value>
                <value>
                    <fullName>CONNECTOR</fullName>
                </value>
                <value>
                    <fullName>COTTON BAG</fullName>
                </value>
                <value>
                    <fullName>CROWN SIZER</fullName>
                </value>
                <value>
                    <fullName>EAS HARD TAGS</fullName>
                </value>
                <value>
                    <fullName>EAS SOFT TAGS</fullName>
                </value>
                <value>
                    <fullName>EAS STORE SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>E-COMMERCE BAGS</fullName>
                </value>
                <value>
                    <fullName>FACE MASK</fullName>
                </value>
                <value>
                    <fullName>FACE SHIELD</fullName>
                </value>
                <value>
                    <fullName>FLIPPER</fullName>
                </value>
                <value>
                    <fullName>FOAM</fullName>
                </value>
                <value>
                    <fullName>FOAM COVER</fullName>
                </value>
                <value>
                    <fullName>FOAM-OTHERS</fullName>
                </value>
                <value>
                    <fullName>FOAM STRIP</fullName>
                </value>
                <value>
                    <fullName>FOOD PACKAGING</fullName>
                </value>
                <value>
                    <fullName>FRAME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Source__c</fullName>
        <description>Cogs upload</description>
        <inlineHelpText>Mainetti developer new product or Sourcing from outside</inlineHelpText>
        <label>Product Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mainetti Product</fullName>
                </value>
                <value>
                    <fullName>Outside Sourcing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Vertical__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>HANGERS</fullName>
                    <default>true</default>
                    <label>HANGERS</label>
                </value>
                <value>
                    <fullName>ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>SEALS</fullName>
                </value>
                <value>
                    <fullName>COMPONENTS</fullName>
                </value>
                <value>
                    <fullName>FLEXIBLE PACKAGING</fullName>
                </value>
                <value>
                    <fullName>TLA</fullName>
                </value>
                <value>
                    <fullName>LABELS &amp; TICKETS</fullName>
                </value>
                <value>
                    <fullName>MCARE</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
                <value>
                    <fullName>OTHER-MOULDED</fullName>
                </value>
                <value>
                    <fullName>E-COMMERCE</fullName>
                </value>
                <value>
                    <fullName>INTELLIGENT SOLUTIONS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Randy_Model__c</fullName>
        <inlineHelpText>Used for Randy model with different model code. Put in as N/A if not applicable to any Mainetti Model.</inlineHelpText>
        <label>Randy Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Retailers__c</fullName>
        <inlineHelpText>Put in the Retailer name if the design is mainly for a specific retailer</inlineHelpText>
        <label>Related Retailers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Size_Length_e_g_17_43cm__c</fullName>
        <label>Size/Length(e.g.17&quot;/43cm)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <inlineHelpText>same as model code. use in other module as reference.</inlineHelpText>
        <label>Style</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_category__c</fullName>
        <label>Sub-category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>ACRYLIC HANGERS</fullName>
                </value>
                <value>
                    <fullName>ADHESIVE LABELS</fullName>
                </value>
                <value>
                    <fullName>APPAREL BAGS</fullName>
                </value>
                <value>
                    <fullName>CARTON</fullName>
                </value>
                <value>
                    <fullName>COMPONENTS</fullName>
                </value>
                <value>
                    <fullName>EAS</fullName>
                    <isActive>false</isActive>
                    <label>EAS</label>
                </value>
                <value>
                    <fullName>E-COMMERCE</fullName>
                </value>
                <value>
                    <fullName>FLEXIBLE PACKAGING</fullName>
                    <isActive>false</isActive>
                    <label>FLEXIBLE PACKAGING</label>
                </value>
                <value>
                    <fullName>FOAM</fullName>
                    <isActive>false</isActive>
                    <label>FOAM</label>
                </value>
                <value>
                    <fullName>HANG TAGS</fullName>
                    <isActive>false</isActive>
                    <label>HANG TAGS</label>
                </value>
                <value>
                    <fullName>HEAT TRANSFER</fullName>
                    <isActive>false</isActive>
                    <label>HEAT TRANSFER</label>
                </value>
                <value>
                    <fullName>HEAT TRANSFER LABELS</fullName>
                </value>
                <value>
                    <fullName>HOOK</fullName>
                    <isActive>false</isActive>
                    <label>HOOK</label>
                </value>
                <value>
                    <fullName>INTELLIGENT SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>LABEL</fullName>
                    <isActive>false</isActive>
                    <label>LABEL</label>
                </value>
                <value>
                    <fullName>MANNEQUINS</fullName>
                </value>
                <value>
                    <fullName>MASK &amp; RESPIRATOR</fullName>
                </value>
                <value>
                    <fullName>M-CARE</fullName>
                    <isActive>false</isActive>
                    <label>M-CARE</label>
                </value>
                <value>
                    <fullName>METAL ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>METAL HANGERS</fullName>
                </value>
                <value>
                    <fullName>NON-APPAREL BAGS</fullName>
                </value>
                <value>
                    <fullName>OTHER-MOULDED</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
                <value>
                    <fullName>OTHER TLA</fullName>
                </value>
                <value>
                    <fullName>OTHER TRIMS</fullName>
                </value>
                <value>
                    <fullName>PACKING MATERIAL</fullName>
                    <isActive>false</isActive>
                    <label>PACKING MATERIAL</label>
                </value>
                <value>
                    <fullName>PADDED HANGERS</fullName>
                </value>
                <value>
                    <fullName>PAPER ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>PAPER BAG</fullName>
                    <isActive>false</isActive>
                    <label>PAPER BAG</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variable_Data_Product__c</fullName>
        <label>Variable Data Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Family__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <formula>IF( ISPICKVAL( Business_Vertical__c  , &apos;Hanger Business&apos;), &apos;Hangers &amp; Accessories&apos;, TEXT( Business_Vertical__c ))</formula>
        <label>text</label>
        <type>Text</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Consolidated_Style__c</columns>
        <columns>Business_Vertical__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Size_Length_e_g_17_43cm__c</columns>
        <columns>Material__c</columns>
        <columns>Status__c</columns>
        <columns>Remarks__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Components</fullName>
        <columns>NAME</columns>
        <columns>Consolidated_Style__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Size_Length_e_g_17_43cm__c</columns>
        <columns>Product_Description__c</columns>
        <columns>A_E_Model__c</columns>
        <columns>Mainetti_Model__c</columns>
        <columns>Randy_Model__c</columns>
        <columns>External_Unique_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>COMPONENTS</value>
        </filters>
        <label>All COMPONENTS</label>
    </listViews>
    <listViews>
        <fullName>All_FLIPPER</fullName>
        <columns>NAME</columns>
        <columns>Consolidated_Style__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Size_Length_e_g_17_43cm__c</columns>
        <columns>Product_Description__c</columns>
        <columns>A_E_Model__c</columns>
        <columns>Mainetti_Model__c</columns>
        <columns>Randy_Model__c</columns>
        <columns>External_Unique_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>FLIPPER</value>
        </filters>
        <label>All FLIPPER</label>
    </listViews>
    <listViews>
        <fullName>All_FOAM</fullName>
        <columns>NAME</columns>
        <columns>Consolidated_Style__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Size_Length_e_g_17_43cm__c</columns>
        <columns>Product_Description__c</columns>
        <columns>A_E_Model__c</columns>
        <columns>Mainetti_Model__c</columns>
        <columns>Randy_Model__c</columns>
        <columns>External_Unique_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family__c</field>
            <operation>contains</operation>
            <value>FOAM</value>
        </filters>
        <label>All FOAM</label>
    </listViews>
    <listViews>
        <fullName>All_HOOK</fullName>
        <columns>NAME</columns>
        <columns>Consolidated_Style__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Size_Length_e_g_17_43cm__c</columns>
        <columns>Product_Description__c</columns>
        <columns>A_E_Model__c</columns>
        <columns>Mainetti_Model__c</columns>
        <columns>Randy_Model__c</columns>
        <columns>External_Unique_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family__c</field>
            <operation>contains</operation>
            <value>HOOK-OTHER</value>
        </filters>
        <label>All HOOK</label>
    </listViews>
    <listViews>
        <fullName>All_INTIMATE</fullName>
        <columns>NAME</columns>
        <columns>Consolidated_Style__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Size_Length_e_g_17_43cm__c</columns>
        <columns>Product_Description__c</columns>
        <columns>A_E_Model__c</columns>
        <columns>Mainetti_Model__c</columns>
        <columns>Randy_Model__c</columns>
        <columns>External_Unique_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family__c</field>
            <operation>contains</operation>
            <value>INTIMATE</value>
        </filters>
        <label>All INTIMATE</label>
    </listViews>
    <listViews>
        <fullName>All_OTHERS_PPS</fullName>
        <columns>NAME</columns>
        <columns>Consolidated_Style__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Size_Length_e_g_17_43cm__c</columns>
        <columns>Product_Description__c</columns>
        <columns>A_E_Model__c</columns>
        <columns>Mainetti_Model__c</columns>
        <columns>Randy_Model__c</columns>
        <columns>External_Unique_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>OTHERS-PPS</value>
        </filters>
        <label>All OTHERS-PPS</label>
    </listViews>
    <listViews>
        <fullName>All_Print_Packaging</fullName>
        <columns>NAME</columns>
        <columns>Consolidated_Style__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Size_Length_e_g_17_43cm__c</columns>
        <columns>Product_Description__c</columns>
        <columns>A_E_Model__c</columns>
        <columns>Mainetti_Model__c</columns>
        <columns>Randy_Model__c</columns>
        <columns>External_Unique_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>FLEXIBLE PACKAGING</value>
        </filters>
        <label>All PRINT &amp; PACKAGING</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_SCARF</fullName>
        <columns>NAME</columns>
        <columns>Consolidated_Style__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Size_Length_e_g_17_43cm__c</columns>
        <columns>Product_Description__c</columns>
        <columns>A_E_Model__c</columns>
        <columns>Mainetti_Model__c</columns>
        <columns>Randy_Model__c</columns>
        <columns>External_Unique_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family__c</field>
            <operation>contains</operation>
            <value>SCARF</value>
        </filters>
        <label>All SCARF</label>
    </listViews>
    <listViews>
        <fullName>All_SECURITY_TAG</fullName>
        <columns>NAME</columns>
        <columns>Consolidated_Style__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Size_Length_e_g_17_43cm__c</columns>
        <columns>Product_Description__c</columns>
        <columns>A_E_Model__c</columns>
        <columns>Mainetti_Model__c</columns>
        <columns>Randy_Model__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family__c</field>
            <operation>contains</operation>
            <value>SECURITY TAG</value>
        </filters>
        <label>All SECURITY TAG</label>
    </listViews>
    <listViews>
        <fullName>AlvinSearch</fullName>
        <columns>NAME</columns>
        <columns>Consolidated_Style__c</columns>
        <columns>Business_Vertical__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Sub_category__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Size_Length_e_g_17_43cm__c</columns>
        <columns>Material__c</columns>
        <columns>Status__c</columns>
        <columns>Remarks__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Vertical__c</field>
            <operation>equals</operation>
            <value>EAS &amp; RFID</value>
        </filters>
        <label>_AlvinSearch</label>
        <sharedTo>
            <role>Sales_Hong_Kong</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EAS_RFID</fullName>
        <columns>NAME</columns>
        <columns>Business_Vertical__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Sub_category__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Orderable__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Remarks__c</columns>
        <columns>Related_Retailers__c</columns>
        <columns>Variable_Data_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Vertical__c</field>
            <operation>equals</operation>
            <value>INTELLIGENT SOLUTIONS</value>
        </filters>
        <label>_EAS_RFID</label>
    </listViews>
    <listViews>
        <fullName>Flexible_Packaging</fullName>
        <columns>NAME</columns>
        <columns>Business_Vertical__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Sub_category__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Orderable__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Remarks__c</columns>
        <columns>Related_Retailers__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Vertical__c</field>
            <operation>equals</operation>
            <value>Flexible Packaging</value>
        </filters>
        <label>_Flexible Packaging</label>
    </listViews>
    <listViews>
        <fullName>Labels_Tickets</fullName>
        <columns>NAME</columns>
        <columns>Business_Vertical__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Sub_category__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Variable_Data_Product__c</columns>
        <columns>Orderable__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Related_Retailers__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Vertical__c</field>
            <operation>equals</operation>
            <value>Labels &amp; Tickets</value>
        </filters>
        <label>_Labels_Tickets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Loaded_Products</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Loaded_Data__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Loaded Products</label>
    </listViews>
    <nameField>
        <label>Product Unique ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>